[TR-5617]: fixing surcharge alignment (#4480)

--- a/src/src/routes/Menu/components/RecipeTile/RecipeTilePurchaseInfo/RecipeTilePurchaseInfo.css
+++ b/src/src/routes/Menu/components/RecipeTile/RecipeTilePurchaseInfo/RecipeTilePurchaseInfo.css
@@ -64,6 +64,7 @@
   text-align: right;
   @media ScreenXXSMax {
     font-size: 12px;
+    margin-left: auto;
     /* We don't have defined 12px font size */
   }
 }
